--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 //modules
 //@import "modules/utilities";
 @import "modules/grid";
-//@import "modules/button";
+@import "modules/button";
 @import "modules/forms";
 //@import "modules/tables";
 @import "modules/modal";
