--- a/src/sass/partials/page/_labels.scss
+++ b/src/sass/partials/page/_labels.scss
@@ -16,7 +16,7 @@
 
 .b-label__item{
     position:relative;
-    padding:0 25px;
+    padding:1px 25px;
     box-shadow:0 0 1px #9c785a;
     background:$primary-light;
     border-radius:$border-radius;
