--- a/src/sass/modules/_forms.scss
+++ b/src/sass/modules/_forms.scss
@@ -18,12 +18,12 @@ textarea {
     vertical-align:middle;
     width:100%;
     margin-bottom: 42px;
-    padding:0 10px;
     background-color: #fff;
     border: 1px solid $border-color;
     border-radius:$border-radius;
     font-size:rem(14px);
     outline:0;
+    line-height:normal;
 
     @include placeholder{
         color:$border-color;
@@ -34,6 +34,15 @@ textarea {
 .g-input,
 .g-select{
     height:35px;
+}
+
+.g-input,
+.g-textarea{
+    padding:2px 10px 0;
+}
+
+.g-select{
+    padding:2px 10px;
 }
 
 .g-textarea{
