--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -4,6 +4,8 @@
 @import "page/_panel.scss";
 @import "page/_smile-row.scss";
 @import "page/_labels.scss";
+@import "page/_close.scss";
+@import "page/_likeinput.scss";
 
 
 
