--- a/src/sass/modules/_button.scss
+++ b/src/sass/modules/_button.scss
@@ -1,58 +1,57 @@
 ﻿@import "base";
 /* Buttons */
-.g-btn,
 .g-clearbutton{
+    background:none;
+    margin:0;
+    padding:0;
+    border:none;
+    outline:0;
+    text-align:center;
+    text-decoration:none !important;
+    cursor:pointer;
+}
+.g-btn{
     display:inline-block;
     vertical-align:middle;
-    cursor: pointer;
-    box-sizing: border-box;
-    outline:0;
-    text-align: center;
-    text-decoration: none !important;
-    white-space: nowrap;
-}
-
-.g-clearbutton{
-    border:none;
-    background:none;
-    padding:0;
-}
-
-.g-btn{
     height:35px;
     line-height:35px;
     padding:0 20px;
+    margin:0;
     color:#fff;
     font-size:rem($project-font-size);
     background: $primary;
     border-radius:$border-radius;
-    border:none;
+    border:1px solid $primary;
+    cursor: pointer;
+    outline:0;
+    text-align: center;
+    text-decoration: none !important;
+    white-space: nowrap;
     @extend .g-transition;
-    transition-property:border-color, background, box-shadow, color;
+    transition-property:border-color, background, color, box-shadow;
 
     &:hover,
     &:focus,
     &:active{
         color:#fff;
         background:darken($primary, 10%);
+        border-color:darken($primary, 10%);
     }
 
     &:disabled{
         opacity:.5;
-
-        &:hover,
-        &:active{
-            color:#fff;
-            background: $primary;
-        }
+        color:$text-color !important;
+        background:#fff !important;
+        border-color:#bdb5af !important;
+        cursor:default;
     }
 }
 
 .g-btn--alt{
-    border:1px solid $primary;
-    line-height:33px;
-    background:#fff;
+    background:none;
+    border-color:transparent;
     color:$primary;
+    box-shadow:inset 0 0 1px .2px $primary;
 
     &:hover,
     &:focus,
@@ -61,11 +60,7 @@
     }
 
     &:disabled{
-        &:hover,
-        &:active{
-            background:#fff;
-            color:$primary;
-        }
+        box-shadow:none;
     }
 }
 
