--- a/src/sass/modules/_forms.scss
+++ b/src/sass/modules/_forms.scss
@@ -13,21 +13,29 @@ textarea {
 
 .g-input,
 .g-select,
-.g-textarea{
+.g-textarea,
+.g-likeinput{
     display:inline-block;
     vertical-align:middle;
+    padding:2px 10px;
     width:100%;
     margin-bottom: 42px;
     background-color: #fff;
     border: 1px solid $border-color;
     border-radius:$border-radius;
     font-size:rem(14px);
+    color:#444c52;
     outline:0;
     line-height:normal;
+}
 
+.g-input,
+.g-select,
+.g-textarea{
     @include placeholder{
         color:$border-color;
         opacity:1;
+        text-overflow:ellipsis;
     }
 }
 
@@ -36,24 +44,21 @@ textarea {
     height:35px;
 }
 
-.g-input,
-.g-textarea{
-    padding:2px 10px 0;
-}
-
-.g-select{
-    padding:2px 10px;
-}
 
 .g-textarea{
-    min-height:5*$project-line-height;
+    min-height:70px;
+    max-height:200px;
+    padding:10px;
+    resize:vertical;
 }
 
 .g-label{
     display:block;
     font-size:rem(14px);
     margin-bottom:8px;
-    font-family: mainFontBold;
+    font-family: $font-bold;
     font-weight: 500;
 }
+
+
 
