--- a/src/css/prefixed.css
+++ b/src/css/prefixed.css
@@ -160,7 +160,7 @@ textarea {
 .g-likeselect {
   display: inline-block;
   vertical-align: middle;
-  padding: 2px 10px;
+  padding: 2px 10px 0;
   width: 100%;
   margin-bottom: 42px;
   background-color: #fff;
