--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -4,8 +4,10 @@
 @import "page/_panel.scss";
 @import "page/_smile-row.scss";
 @import "page/_labels.scss";
-@import "page/_close.scss";
+@import "page/_icon-close.scss";
+@import "page/_icon-add.scss";
 @import "page/_likeinput.scss";
+@import "page/_panelinput.scss";
 
 
 
