--- a/src/sass/modules/_button.scss
+++ b/src/sass/modules/_button.scss
@@ -28,7 +28,7 @@
     text-decoration: none !important;
     white-space: nowrap;
     @extend .g-transition;
-    transition-property:border-color, background, color, box-shadow;
+    transition-property:border-color, background, color;
 
     &:hover,
     &:focus,
@@ -38,20 +38,17 @@
         border-color:darken($primary, 10%);
     }
 
-    &:disabled{
-        opacity:.5;
-        color:$text-color !important;
-        background:#fff !important;
-        border-color:#bdb5af !important;
+    &:disabled,
+    &.disabled{
+        background:#98a4c7;
+        border-color:#98a4c7;
         cursor:default;
     }
 }
 
 .g-btn--alt{
     background:none;
-    border-color:transparent;
     color:$primary;
-    box-shadow:inset 0 0 1px .2px $primary;
 
     &:hover,
     &:focus,
@@ -59,9 +56,18 @@
         background:$primary;
     }
 
-    &:disabled{
-        box-shadow:none;
+    &:disabled,
+    &.disabled{
+        color:$text-color;
+        opacity:.5;
+        background:#fff;
+        border-color:#bdb5af;
+        cursor:default;
     }
+}
+
+.g-btn--wide{
+    padding:0 45px;
 }
 
 
