--- a/src/sass/partials/page/_labels.scss
+++ b/src/sass/partials/page/_labels.scss
@@ -2,6 +2,9 @@
 /*Labels*/
 .b-label{
     line-height:1;
+    position:relative;
+
+    padding-left:60px;
 }
 .b-label__item,
 .b-label__title{
@@ -12,6 +15,11 @@
     vertical-align:middle;
     margin:5px 10px 5px 0;
     font-size:rem(14px);
+}
+
+.b-label__title{
+    position:absolute;
+    left:0; top:0;
 }
 
 .b-label__item{
@@ -43,4 +51,48 @@
     right: 1px;
     top: 1px;
     
+}
+
+.b-label__btn{
+    @extend .g-clearbutton;
+    height:25px;
+    width:27px;
+    margin:5px 0;
+    line-height:22px;
+    display:inline-block;
+    vertical-align:middle;
+    border-radius:$border-radius;
+    background:$primary-light;
+    box-shadow:inset 0 0 1px .2px $text-color;
+
+    .g-icon-add--small{
+        @include size(8px);
+    }
+
+    &:hover{
+        .g-icon-add--small{
+            &:before,
+            &:after{
+                background:$primary;
+            }
+        }
+    }
+}
+
+.b-label__panel{
+    position:absolute;
+    top:100%;
+    left:0;
+    width:100%;
+    padding:10px;
+    margin-top:8px;
+    background:#fff;
+    border-radius:$border-radius;
+    border:1px solid $border-color;
+    z-index:1000;
+    display:none;
+
+    &.active{
+        display:block;
+    }
 }
