--- a/src/sass/partials/page/_panel.scss
+++ b/src/sass/partials/page/_panel.scss
@@ -1,6 +1,7 @@
 ﻿@import "../../modules/_base.scss";
 /*Panels*/
 .b-panel{
+    margin-bottom:20px;
     border:1px solid $border-color;
     border-radius:$border-radius;
     box-shadow:0 0 1px $border-color;
@@ -19,7 +20,38 @@
     border-bottom-left-radius:$border-radius;
     border-bottom-right-radius:$border-radius;
     line-height:1.5;
-    background:#f3f2f1;
+    background:#fff;
+    font-size:rem(14px);
+
+    p{
+        &:first-of-type{
+            margin-top:0;
+        }
+    }
+}
+
+.b-panel--alt{
+    .b-panel__entry,
+    .b-panel__footer{
+        background:#f3f2f1;
+    }
+}
+
+.b-panel__close{
+    @extend .b-modal__close;
+}
+
+.b-panel__footer{
+    padding:20px 24px;
+    border-bottom-left-radius:$border-radius;
+    border-bottom-right-radius:$border-radius;
+    @extend .g-clearfix;
+
+    .g-likeinput,
+    .g-likeselect{
+        margin-bottom:0;
+    }
+
 }
 
 
