--- a/src/sass/partials/page/_panel.scss
+++ b/src/sass/partials/page/_panel.scss
@@ -13,6 +13,7 @@
     border-top-left-radius:$border-radius;
     border-top-right-radius:$border-radius;
     border-bottom-color:$border-color !important;
+    color:$text-color;
 }
 
 .b-panel__entry{
