--- a/src/css/prefixed.css
+++ b/src/css/prefixed.css
@@ -359,6 +359,7 @@ textarea {
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   border-bottom-color: #bdb5af !important;
+  color: #58402c;
 }
 
 .b-panel__entry {
@@ -473,7 +474,7 @@ textarea {
   height: 25px;
   width: 27px;
   margin: 5px 0;
-  line-height: 22px;
+  line-height: 18px;
   display: inline-block;
   vertical-align: middle;
   border-radius: 7px;
@@ -484,10 +485,6 @@ textarea {
 .b-label__btn .g-icon-add--small {
   height: 8px;
   width: 8px;
-}
-
-.b-label__btn:hover .g-icon-add--small:before, .b-label__btn:hover .g-icon-add--small:after {
-  background: #263972;
 }
 
 .b-label__panel {
@@ -516,6 +513,11 @@ textarea {
   width: 16px;
   position: relative;
   overflow: hidden;
+  outline: 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .g-icon-close:before, .g-icon-add:before, .g-icon-close:after, .g-icon-add:after {
@@ -541,10 +543,6 @@ textarea {
   -webkit-transform: rotate(-45deg);
       -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
-}
-
-.g-icon-close:hover:before, .g-icon-add:hover:before, .g-icon-close:hover:after, .g-icon-add:hover:after {
-  background: #263972;
 }
 
 .g-icon-close--small, .g-icon-add--small {
@@ -684,7 +682,7 @@ textarea {
 .g-panelinput__wrap {
   display: block;
   padding: 0 30px 0 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   position: relative;
 }
 
