--- a/src/css/unprefixed.css
+++ b/src/css/unprefixed.css
@@ -356,6 +356,7 @@ textarea {
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   border-bottom-color: #bdb5af !important;
+  color: #58402c;
 }
 
 .b-panel__entry {
@@ -463,7 +464,7 @@ textarea {
   height: 25px;
   width: 27px;
   margin: 5px 0;
-  line-height: 22px;
+  line-height: 18px;
   display: inline-block;
   vertical-align: middle;
   border-radius: 7px;
@@ -474,10 +475,6 @@ textarea {
 .b-label__btn .g-icon-add--small {
   height: 8px;
   width: 8px;
-}
-
-.b-label__btn:hover .g-icon-add--small:before, .b-label__btn:hover .g-icon-add--small:after {
-  background: #263972;
 }
 
 .b-label__panel {
@@ -506,6 +503,8 @@ textarea {
   width: 16px;
   position: relative;
   overflow: hidden;
+  outline: 0;
+  user-select: none;
 }
 
 .g-icon-close:before, .g-icon-add:before, .g-icon-close:after, .g-icon-add:after {
@@ -526,10 +525,6 @@ textarea {
 
 .g-icon-close:after, .g-icon-add:after {
   transform: rotate(-45deg);
-}
-
-.g-icon-close:hover:before, .g-icon-add:hover:before, .g-icon-close:hover:after, .g-icon-add:hover:after {
-  background: #263972;
 }
 
 .g-icon-close--small, .g-icon-add--small {
@@ -664,7 +659,7 @@ textarea {
 .g-panelinput__wrap {
   display: block;
   padding: 0 30px 0 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   position: relative;
 }
 
